--- a/style.css
+++ b/style.css
@@ -105,9 +105,12 @@ nav.sticky ul li a {
   height: 100vh;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   position: relative;
+  color: white;
+  padding-left: 100px;
 }
 
 .photo::before {
@@ -122,7 +125,61 @@ nav.sticky ul li a {
   opacity: 0.8;
 }
 
-.photo h1 {
+.photo div {
   position: relative;
 }
 
+.photo div:first-child {
+  font-size: 1.5rem;
+}
+
+.moi {
+  background-color: rgb(223, 215, 215);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  padding: 80px;
+}
+
+.moi div {
+  font-size: 20px;
+}
+
+.moi h3::after {
+  content: "";
+  display: block;
+  margin-top: 10px;
+  width: 150px;
+  height: 3px;
+  background-color: #000;
+}
+
+#about {
+  font-size: 2.5rem;
+}
+
+
+@media screen and (max-width:991px) {
+  .photo {
+    padding-left: 35px;
+  }
+  #about {
+    font-size: 2rem;
+  }
+  .moi {
+    padding: 60px;
+  }
+}
+
+@media (max-width:400px) {
+  .photo div:first-child {
+    font-size: 1.1rem;
+  }
+  #about {
+    font-size: 1.5rem;
+  }
+  .moi {
+    padding: 30px;
+  }
+}
