--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ nav.sticky ul li a {
   }
 }
 
-@media (max-width:400px) {
+@media (max-width:450px) {
   .photo div:first-child {
     font-size: 1.1rem;
   }
@@ -213,3 +213,105 @@ nav.sticky ul li a {
   min-height: 60vh;
 }
 
+.projet {
+  background-color: rgb(223, 215, 215);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  padding: 80px;
+  min-height: 40vh;
+}
+
+/* .verticale-bar {
+  border-left: 2px solid black;
+  height: 200px;
+  position: absolute;
+  left: 50%;
+  margin-top: 100px;
+} */
+
+.travaux {
+  display: flex;
+  flex-direction: column;
+}
+
+.image {
+  position: relative;
+  width: 370px;
+}
+
+.image-jointe {
+  display: block;
+  width: 100%;
+  height: 300px;
+  border: 3px solid black;
+}
+
+.real-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.25s;
+}
+
+.real-overlay > * {
+  transform: translateY(100px);
+  transition: transform 0.25s;
+}
+
+.real-overlay:hover {
+  opacity: 1;
+}
+
+.real-overlay:hover > * {
+  transform: translateY(0);
+}
+
+.real-titre {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.real-description {
+  font-size: 1.25rem;
+  margin-top: 0.25rem;
+}
+
+.travaux i {
+  font-size: 1.1rem;
+}
+
+.travaux button {
+  background-color: rgb(207, 198, 198);
+}
+.travaux button:hover {
+  background-color: rgb(255, 255, 255);
+}
+
+@media screen and (max-width:991px) {
+  .fond {
+    font-size: 4rem;
+  }
+  .titre {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width:450px) {
+  .fond {
+    font-size: 2.8rem;
+  }
+  .titre {
+    font-size: 1.3rem;
+  }
+}
