--- a/style.css
+++ b/style.css
@@ -551,6 +551,7 @@ footer {
   text-decoration: none;
   color: rgb(119, 117, 117);
   transition: all 0.3s ease;
+  cursor: pointer;
 }
 
 .fa-download {
